--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./assets/fondo.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
